--- a/accueil-discord/v01b00.css
+++ b/accueil-discord/v01b00.css
@@ -7,8 +7,8 @@ a:link,a:visited,a:hover,a:active{text-decoration:none;cursor:pointer}
 hr{border:0;height:0;margin:0;padding:0;clear:both}
 /* ########################################################################## */
 
-.header .normlFrance{height:100px;background:url("../elements/discord.png") #0198b5 center center no-repeat;padding-bottom: 10px;}
-.header .discord{height:100px;background:url("../elements/NORMLFrance-blanc.png") #c8442b top center no-repeat;padding-top: 10px;}
+.header .normlFrance{height:100px;background:url("./elements/discord.png") #0198b5 center center no-repeat;padding-bottom: 10px;}
+.header .discord{height:100px;background:url("./elements/NORMLFrance-blanc.png") #c8442b top center no-repeat;padding-top: 10px;}
 .plus{position:absolute;top:0;width:100%;height:200px;}	
 h1{position:absolute;text-indent:-9999px;}
 h2{padding:1em}
@@ -21,12 +21,12 @@ h2{padding:1em}
 
 @media screen and (min-width: 640px){
 	
-	body{font-size:0.9em;background:url("../elements/fond.gif") #222 center 0 repeat-y;}
+	body{font-size:0.9em;background:url("./elements/fond.gif") #222 center 0 repeat-y;}
 	.discord{width:50%;text-align:right}
 	.normlFrance{width:50%;float:right}
 	.header{position:absolute;top:0;width:100%;}
-	.header .discord{height:100px;background:url("../elements/discord.png") #00A437 right center no-repeat;}
-	.header .normlFrance{height:100px;background:url("../elements/NORMLFrance-blanc.png") #67C72C left center no-repeat;}
+	.header .discord{height:100px;background:url("./elements/discord.png") #00A437 right center no-repeat;}
+	.header .normlFrance{height:100px;background:url("./elements/NORMLFrance-blanc.png") #67C72C left center no-repeat;}
 	.plus{height:100px}
 	.content{padding:250px 0 100px}
 	.content .discord,
@@ -48,6 +48,6 @@ h2{padding:1em}
 	body{background:#000}
 	.header{margin:0 auto;width:1680px;}
 	.link{width:1680px;}
-	.global{height:100%;min-height:100%;margin:0 auto;width:1680px;background:url("../elements/fond.gif") #222 center 0 repeat-y;}
+	.global{height:100%;min-height:100%;margin:0 auto;width:1680px;background:url("./elements/fond.gif") #222 center 0 repeat-y;}
 	
 }
